fix menu options on mobile

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -129,4 +129,12 @@
         align-items: flex-start;
         padding-top: 100px;
     }
+
+    #menuOptions h2 {
+        color: white;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 54px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
 }
